[package]
name = "easytier-relay-wasm"
version = "0.1.0"
edition = "2021"
authors = ["EasyTier Contributors"]
description = "WASM module for EasyTier WebSocket relay state management"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.99"
js-sys = "0.3.76"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0"
hex = "0.4"

[dependencies.web-sys]
version = "0.3.76"
features = ["console"]

[build-dependencies]
prost-build = "0.13.2"

[workspace]

[profile.release]
opt-level = "z"
lto = true
